Finalização da Epic Games

--- a/netflix/styles/delays.css
+++ b/netflix/styles/delays.css
@@ -14,4 +14,4 @@
 
 .seventh-delay { animation-delay: 1.6s; }
 
-.eighth-delay { animation-delay: 1.8s; } animation fade-up fifth-delay
+.eighth-delay { animation-delay: 1.8s; }
